--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<title>Web Page</title>
-<head>Hello world!</head>
+<!DOCTYPE html>
+<html>
+<link href="style.css" rel="stylesheet" type="text/css" />
+
+<title>Sub Page</title>
+<head>Helo world!</head>
 <body>Welcome to my website!</body>
+
+</html>
