--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <title>Sub Page</title>
 <head>Helo world!</head>
 <body>Welcome to my website!</body>
+  <footer>We're still a work-in-progress</footer>
 
 </html>
