--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 
 <title>Sub Page</title>
-<head>Helo world!</head>
+<head>Hello world!</head>
 <body>Welcome to my website!</body>
   <footer>We're still a work-in-progress</footer>
 
