--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <link href="style.css" rel="stylesheet" type="text/css" />
 
-<title>Sub Page</title>
+<head>
+  <title>Sub Page</title>
+</head>
+
 <header>Hello world!</header>
-<body>Welcome to my website!</body>
+
+<body>
+  <h1>Welcome to my website!</h1>
+  <p>This will (probably) be a "Meet the creator" style page, assuming I can get my main page to work.</p>
+</body>
 <footer>We're still a work-in-progress</footer>
 
 </html>
