--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sub Page</title>
 </head>
 
-<header>Hello world!</header>
+<header style="font-size:300%;>Hello world!</header>
 
 <body>
   <h1>Welcome to my website!</h1>
