--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <h1>Welcome to my website!</h1>
   <p>This will (probably) be a "Meet the creator" style page, assuming I can get my main page to work.</p>
 </body>
-<footer>We're still a work-in-progress</footer>
+<footer>We are under construction, please bare with us!</footer>
 
 </html>
