--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Sub Page</title>
 </head>
 
-<header>Hello world!</header>
+<header>This will lead to the homepage.     This will be a dropdown of all my mods.     This will lead to my creator page.     This will link to Red Realitys 0o0.</header>
 
 <body>
   <h1>Welcome to my website!</h1>
-  <p>This will (probably) be a "Meet the creator" style page, assuming I can get my main page to work.</p>
+  <p>My name is Ori, and I like to create things! I use a mod called [Customizable Player Models](https://modrinth.com/plugin/custom-player-models) to make models for Minecraft!</p>
 </body>
 <footer>We are under construction, please bare with us!</footer>
 
