--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Sub Page</title>
 </head>
 
-<header>This will lead to the homepage.     This will be a dropdown of all my mods.     This will lead to my creator page.     This will link to Red Realitys 0o0.</header>
+<header>
+  <div class= "navbar">
+    <a href="redrain0o0.github.io">Home</a>
+  </div>
+</header>
 
 <body>
   <h1>Welcome to my website!</h1>
