--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <header>
   <div class= "navbar">
-    <a href="redrain0o0.github.io">Home</a>
+    <a>[Home](redrain0o0.github.io)</a>
   </div>
 </header>
 
