--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <header>
   <div class= "navbar">
-    <a href="https://redrain0o0.github.com/">Home</a>
+    <a href="https://redrain0o0.github.io/">Home</a>
   </div>
 </header>
 
