--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 
 <head>
-  <title>Sub Page</title>
+  <title>RedRain0o0</title>
 </head>
 
 <header>
   <div class= "navbar">
     <a href="https://redrain0o0.github.io/">Home</a>
+    <a href="https://redrain0o0.github.io/mods/">Mods</a>
+    <a href="https://redrain0o0.github.io/RedRain0o0/">RedRain0o0</a>
+    <a href="https://red-realitys-0o0.github.io/">Red Realitys 0o0</a>
   </div>
 </header>
 
