--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   <h1>Welcome to my website!</h1>
   <p>My name is Ori, and I like to create things! I use a mod called [Customizable Player Models](https://modrinth.com/plugin/custom-player-models) to make models for Minecraft!</p>
 </body>
-<footer>We are under construction, please bare with us!</footer>
+<footer>We are under less construction, please bare with us!</footer>
 
 </html>
