--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
   <h1>Welcome to my website!</h1>
-  <p>My name is Ori, and I like to create things! I use a mod called [Customizable Player Models](https://modrinth.com/plugin/custom-player-models) to make models for Minecraft!</p>
+  <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
+  <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
 </body>
 <footer>We are under less construction, please bare with us!</footer>
 
