--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <div class= "navbar">
     <a href="https://redrain0o0.github.io/">Home</a>
     <a href="https://redrain0o0.github.io/mods/">Mods</a>
+    <a href="https://redrain0o0.github.io/projects/">Projects</a>
     <a href="https://redrain0o0.github.io/RedRain0o0/">RedRain0o0</a>
     <a href="https://red-realitys-0o0.github.io/">Red Realitys 0o0</a>
+    <a href="https://discord.gg/zKSJkNBr67/">Discord</a>
+    <a href="https://ko-fi.com/redrain0o0/">Ko-Fi</a>
   </div>
 </header>
 
