Actually removed <footer> from index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h1>Welcome to my website!</h1>
   <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
   <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
+  <p>We are under less construction, please bare with us!</p>
 </body>
-<footer>We are under less construction, please bare with us!</footer>
 
 </html>
