--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class= "navbar">
+  <!-- <div class= "navbar">
     <a href="https://redrain0o0.github.io/">Home</a>
     <a href="https://redrain0o0.github.io/RedRain0o0/">RedRain0o0</a>
     <a href="https://redrain0o0.github.io/projects/">Projects</a>
@@ -15,12 +15,14 @@
     <a href="https://red-realitys-0o0.github.io/">Red Realitys 0o0</a>
     <a href="https://discord.gg/zKSJkNBr67/">Discord</a>
     <a href="https://ko-fi.com/redrain0o0/">Ko-Fi</a>
-  </div>
+  </div> -->
   <div id="background">
-    <h1>Welcome to my website!</h1>
-    <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
-    <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
-    <p>We are under less construction, please bare with us!</p>
+    <div id="content">
+      <h1>Welcome to my website!</h1>
+      <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
+      <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
+      <p>We are under less construction, please bare with us!</p>
+    </div>
   </div>
 </body>
 
