added some badges to sidebar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>testing sum shit lmao</p>
       <div id="navbar">
         <a href="https://redrain0o0.github.io/">Home</a>
-        <a href="https://redrain0o0.github.io/RedRain0o0/">RedRain0o0</a>
+        <a href="https://redrain0o0.github.io/RedRain0o0/"><img src="/assets/badges/nav/redrain0o0.png"></a>
         <a href="https://redrain0o0.github.io/projects/">Projects</a>
         <a href="https://redrain0o0.github.io/the-gallery/">The Gallery</a>
         <a href="https://red-realitys-0o0.github.io/">Red Realitys 0o0</a>
