--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div id="background">
     <div id="sidebar">
-      <p>testing sum shit lmao</p>
+      <p>Cool and awesome Sidebar!</p>
       <div id="navbar">
         <a href="https://redrain0o0.github.io/">Home</a>
         <a href="https://redrain0o0.github.io/RedRain0o0/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/redrain0o0.png"></a>
@@ -26,10 +26,12 @@
       </div>
     </div>
     <div id="main-content">
-      <h1>Welcome to my website!</h1>
-      <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
-      <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
-      <p>We are under less construction, please bare with us!</p>
+      <div id="content-frame">
+        <h1>Welcome to my website!</h1>
+        <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
+        <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
+        <p>We are under less construction, please bare with us!</p>
+      </div>
     </div>
   </div>
 </body>
