update to badges

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <a href="https://redrain0o0.github.io/projects/">Projects</a>
         <a href="https://redrain0o0.github.io/the-gallery/">The Gallery</a>
         <a href="https://red-realitys-0o0.github.io/">Red Realitys 0o0</a>
-        <a href="https://discord.gg/zKSJkNBr67/">Discord</a>
-        <a href="https://ko-fi.com/redrain0o0/">Ko-Fi</a>
+        <a href="https://discord.gg/zKSJkNBr67/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/discord.png"></a>
+        <a href="https://ko-fi.com/redrain0o0/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/ko-fi.png"></a>
       </div>
       <div id="cool-ppl">
         <a href="https://marlee-goat.neocities.org/"><img src="https://marlee-goat.neocities.org/marmar8831.gif"></a>
