--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <div id="sidebar">
       <p>Cool and awesome Sidebar!</p>
       <div id="navbar">
-        <a href="https://redrain0o0.github.io/">Home</a>
+        <a href="https://redrain0o0.github.io/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/home.png"></a>
         <a href="https://redrain0o0.github.io/RedRain0o0/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/redrain0o0.png"></a>
-        <a href="https://redrain0o0.github.io/projects/">Projects</a>
-        <a href="https://redrain0o0.github.io/the-gallery/">The Gallery</a>
-        <a href="https://red-realitys-0o0.github.io/">Red Realitys 0o0</a>
+        <a href="https://redrain0o0.github.io/projects/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/projects.png"></a>
+        <a href="https://redrain0o0.github.io/the-gallery/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/the-gallery.png"></a>
         <a href="https://discord.gg/zKSJkNBr67/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/discord.png"></a>
         <a href="https://ko-fi.com/redrain0o0/"><img src="https://redrain0o0.github.io/RedRain0o0/assets/badges/nav/ko-fi.png"></a>
       </div>
