change under construction text and repin background

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div id="content-frame">
         <h1>Welcome to my website!</h1>
         <p>My name is Ori, I'm an independant creator on multiple platforms.</p>
-        <p>Lorem ipsum! This page is being re-updated, so please bare with me!</p>
-        <p>We are under less construction, please bare with us!</p>
+        <p>Lorem ipsum! This page is being re-updated, so please bear with me!</p>
+        <p>We are fucking balling, but still in progress!</p>
       </div>
     </div>
   </div>
