add sky to cool-peeps

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </div>
       <div id="cool-ppl">
         <a href="https://marlee-goat.neocities.org/"><img src="https://marlee-goat.neocities.org/marmar8831.gif"></a>
+        <a href="https://www.beegirl.gay/"><img src="https://www.beegirl.gay/CDN/badge.png"></a>
       </div>
     </div>
     <div id="main-content">
