favicon and bsky account gen

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <head>
     <title>RedRain0o0</title>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
   </head>
 
   <body>
